--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
  
   <title>Tic Tac Toe Game</title>
   <link rel="stylesheet" href="style.css">
+  
+
 </head>
 <body>
   <div class="select-box">
@@ -13,7 +15,7 @@
       <div class="title">Select which you want to be?</div>
       <div class="options">
         <button class="playerX">Player (X)</button>
-        <button class="playerY">Player (Y)</button>
+        <button class="playerO">Player (Y)</button>
       </div>
     </div>
   </div>
@@ -44,6 +46,14 @@
     </section>
    </div>
   </div>
-  <script src="/project password/script.js"></script>
+
+
+  <div class="result-box">
+    <div class="won-text">Player <p>X</p> won the game</div>
+    <div class="btn">
+      <button>Replay</button>
+    </div>
+  </div>
+  <script src="/project-password/script.js"></script>
 </body>
 </html>
